--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "**/semver": "^7.5.3",
     "**/braces": "^3.0.3",
     "**/@babel/runtime": "7.26.10",
+    "**/micromatch": "^4.0.8",
     "@babel/cli/**/ansi-regex": "^5.0.1",
     "@babel/cli/**/minimist": "^1.2.6",
     "@babel/cli/chokidar/glob-parent": "^6.0.1",
@@ -128,7 +129,7 @@
   },
   "devDependencies": {
     "@axe-core/puppeteer": "4.6.1",
-    "@babel/cli": "^7.10.5",
+    "@babel/cli": "^7.12.0",
     "@babel/core": "^7.11.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
@@ -148,7 +149,7 @@
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/cheerio": "^0.22.31",
     "@types/enzyme": "3.10.12",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^30.0.0",
     "@types/jsdom": "21.1.7",
     "@types/lodash": "^4.14.192",
     "@types/node": "16.11.7",
@@ -161,11 +162,11 @@
     "@types/refractor": "3.0.0",
     "@types/url-parse": "^1.4.8",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "^30.0.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-dynamic-import-node": "^2.3.3",
@@ -205,8 +206,8 @@
     "html": "^1.0.0",
     "html-format": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
-    "jest": "^29.7.0",
-    "jest-cli": "^29.7.0",
+    "jest": "^30.0.0",
+    "jest-cli": "^30.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
@@ -245,8 +246,8 @@
     "webpack": "npm:@amoo-miki/webpack@4.46.0-rc.2",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.2",
-    "yeoman-generator": "^5.8.0",
-    "yo": "^4.3.1"
+    "yeoman-generator": "^7.5.1",
+    "yo": "^5.1.0"
   },
   "peerDependencies": {
     "@types/react": "^16.9.34",
