--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "assert": "^2.1.0",
     "autoprefixer": "^10.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
@@ -174,7 +175,7 @@
     "cache-loader": "^4.1.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
-    "circular-dependency-plugin": "^5.2.0",
+    "circular-dependency-plugin": "^5.2.2",
     "core-js": "^3.29.1",
     "cross-env": "^7.0.3",
     "css-loader": "5.0.0",
@@ -204,12 +205,14 @@
     "glob": "^8.1.0",
     "html": "^1.0.0",
     "html-format": "^1.0.2",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "pegjs": "^0.10.0",
     "postcss": "^8.0.0",
     "postcss-cli": "^8.0.0",
@@ -217,6 +220,7 @@
     "postcss-loader": "^4.0.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
+    "process": "^0.11.10",
     "puppeteer": "^22.0.0",
     "raw-loader": "^4.0.1",
     "react": "^16.14.0",
@@ -239,12 +243,12 @@
     "shelljs": "^0.8.5",
     "start-server-and-test": "^2.0.0",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^4.1.0",
+    "terser-webpack-plugin": "^5.3.9",
     "typescript": "4.7.4",
     "url-loader": "^4.1.0",
-    "webpack": "npm:@amoo-miki/webpack@4.46.0-rc.2",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.1",
     "yeoman-generator": "^5.8.0",
     "yo": "^4.3.1"
   },
