--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   "dependencies": {
     "@types/chroma-js": "^2.4.0",
     "@types/react-beautiful-dnd": "^13.1.3",
-    "@types/react-input-autosize": "^2.2.1",
+    "@types/react-input-autosize": "^2.2.4",
     "@types/react-window": "^1.8.5",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.2",
@@ -107,7 +107,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dropzone": "^14.2.3",
     "react-focus-on": "^3.5.0",
-    "react-input-autosize": "^3.0.0",
+    "react-input-autosize": "npm:react-18-input-autosize@^3.0.0",
     "react-is": "~16.3.0",
     "react-virtualized-auto-sizer": "1.0.7",
     "react-window": "^1.8.9",
